# django-payments-paymaster

./: .gitignore  .travis.yml  README.md  initial.sh  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile
docs/source/: conf.py  index.rst
example_app/: __init__.py  apps.py
payments_paymaster/: __init__.py  constants.py  provider.py  settings.py  utils.py
payments_paymaster/rest_api/: client.py  exceptions.py
tests/: __init__.py  apps.py  conftest.py  models.py  test_calculate_hash.py  test_example.py  test_integration.py  urls.py  views.py
tests/migrations/: 0001_initial.py
tests/settings/: dev.py  test.py
tests/templates/: payment.html
