[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]
[bumpversion:file:docs/source/conf.py]

[bumpversion:file:payments_paymaster/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
	payments_paymaster/migrations,
	.git,
	.tox,
	docs/conf.py,
	build,
	dist
max-line-length = 99

